feat(carte): created front for the carte page. Revamped the API to have a datastructure more coherent with the desired page